<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="spotify_streamer_app_name">Spotify Streamer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scores_app_name">Scores App</string>
    <string name="library_app_name">Library App</string>
    <string name="build_it_bigger_app_name">Build It Bigger</string>
    <string name="xyz_reader_name">XYZ Reader</string>
    <string name="capstone_app_name">Capstone</string>
</resources>
