<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background_material_dark">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_app_name"
        android:id="@+id/spotify_streamer_button_id"
        android:layout_marginTop="101dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:onClick="displayMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_name"
        android:id="@+id/scores_app_button_id"
        android:layout_below="@+id/spotify_streamer_button_id"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="displayMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app_name"
        android:id="@+id/library_app_button_id"
        android:layout_below="@+id/scores_app_button_id"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="displayMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_app_name"
        android:id="@+id/build_it_bigger_button_id"
        android:layout_below="@+id/library_app_button_id"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="displayMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_name"
        android:id="@+id/xyz_reader_button_id"
        android:layout_below="@+id/build_it_bigger_button_id"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="displayMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app_name"
        android:id="@+id/capstone_app_button_id"
        android:layout_below="@+id/xyz_reader_button_id"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:background="#ff1ce2ff"
        android:onClick="displayMessage" />
</RelativeLayout>
